--- a/crates/pumpfun/Cargo.toml
+++ b/crates/pumpfun/Cargo.toml
@@ -21,5 +21,5 @@ mpl-token-metadata = "5.1.0"
 pumpfun-cpi = { path = "../pumpfun-cpi", version = "1.1.0" }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.132"
-solana-sdk = "2.1.9"
+solana-sdk = "=1.17.3"
 tokio = "1.41.1"
